--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Anki学习技术文档
-description: 学习骇客Anki的技术文档集
+title: Zane
+description: Zane
 theme: minima
-markdown: kramdown
-highlighter: rouge
 
 # 插件
 plugins:
@@ -12,25 +10,11 @@ plugins:
 # 导航菜单
 header_pages:
   - index.md
+  - albums.md
 
-# 集合配置
-collections:
-  posts:
-    output: true
-    permalink: /:title/
-
-defaults:
-  - scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-  - scope:
-      path: ""
-    values:
-      layout: "default"
+# 文章链接格式
+permalink: /:title/
 
 # 站点设置
 timezone: Asia/Shanghai
-encoding: utf-8
 lang: zh-CN
